--- a/.github/workflows/makecode-release.yml
+++ b/.github/workflows/makecode-release.yml
@@ -53,11 +53,8 @@ jobs:
         run: |
           cat binary-*.uf2 > built/arcade.uf2
       - name: upload bundled
-        uses: actions/upload-release-asset@v1.0.1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./built/arcade.uf2
-          asset_name: arcade.uf2
-          asset_content_type: application/octet-stream
+          files: ./built/arcade.uf2
